--- a/app/src/main/res/drawable/input_search.xml
+++ b/app/src/main/res/drawable/input_search.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <corners android:radius="70dp"/>
-    <stroke android:width="2" android:color="@color/colorPrimary"/>
+    <stroke android:width="2dp" android:color="@color/colorPrimary"/>
 </shape>
