--- a/app/src/main/res/layout/single_view.xml
+++ b/app/src/main/res/layout/single_view.xml
@@ -23,6 +23,7 @@
         android:layout_below="@+id/image_single_view"
         android:gravity="center"
         android:background="@color/colorPrimary"
-        android:layout_marginTop="16dp"/>
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="8dp"/>
 
 </RelativeLayout>
