--- a/app/src/main/res/layout/single_view.xml
+++ b/app/src/main/res/layout/single_view.xml
@@ -14,6 +14,7 @@
         android:layout_margin="20dp"/>
 
     <TextView
+        android:id="@+id/textView_single_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="My Car"
