--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -19,6 +19,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="24dp"
             android:layout_marginEnd="16dp"
+            android:fontFamily="@font/abril_fatface"
             android:text="FireNotes"
             android:textColor="#FFFFFF"
             android:textSize="36sp"
