--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -16,6 +16,7 @@
         android:theme="@style/ThemeOverlay.AppCompat.Dark"/>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/notelist"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
