I added TextViews in xml for title and content.

--- a/app/src/main/res/layout/content_note_details.xml
+++ b/app/src/main/res/layout/content_note_details.xml
@@ -8,4 +8,16 @@
     tools:context=".NoteDetails"
     tools:showIn="@layout/activity_note_details">
 
+    <TextView
+        android:id="@+id/noteDetailsContent"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:padding="16dp"
+        android:text="TextView"
+        android:scrollbars="vertical"
+        android:isScrollContainer="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
