--- a/app/src/main/res/layout/content_note_details.xml
+++ b/app/src/main/res/layout/content_note_details.xml
@@ -12,7 +12,7 @@
         android:id="@+id/noteDetailsContent"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:padding="16dp"
+        android:padding="18sp"
         android:text="TextView"
         android:scrollbars="vertical"
         android:isScrollContainer="true"
