I added that color of card note is remembered and added to background note in details

--- a/app/src/main/res/layout/content_note_details.xml
+++ b/app/src/main/res/layout/content_note_details.xml
@@ -12,10 +12,12 @@
         android:id="@+id/noteDetailsContent"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:padding="18sp"
-        android:text="TextView"
-        android:scrollbars="vertical"
+        android:background="@color/yellow"
         android:isScrollContainer="true"
+        android:padding="16sp"
+        android:scrollbars="vertical"
+        android:text="TextView"
+        android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
