--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -32,7 +32,7 @@
                 android:text="title"/>
 
             <com.google.android.exoplayer2.ui.AspectRatioFrameLayout
-                android:id="@+id/exoplayer_view"
+                android:id="@+id/expolayer_view"
                 android:layout_width="match_parent"
                 android:layout_height="220dp"
                 app:resize_mode="fill"
