--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     app:cardCornerRadius="2dp"
     app:cardBackgroundColor="@android:color/white"
     app:cardElevation="2dp"
@@ -31,10 +31,13 @@
                 android:background="@android:color/black"
                 android:text="title"/>
 
-            <com.google.android.exoplayer2.ui.AspectRatioFrameLayout
+
+
+            <com.google.android.exoplayer2.ui.PlayerView
                 android:id="@+id/expolayer_view"
                 android:layout_width="match_parent"
                 android:layout_height="220dp"
+                android:background="@color/colorPrimary"
                 app:resize_mode="fill"
                 android:layout_gravity="center"/>
 
